# GstCsound

./: AUTHORS  README  config.h  config.status  configure  configure.ac  libcsound64.pc  libtool
src/: Makefile.am  gstcsoundfilter.c  gstcsoundfilter.h  gstcsoundsink.c  gstcsoundsink.h  gstcsoundsrc.c  gstcsoundsrc.h  plugin.c
src/.deps/: libgstcsound_la-gstcsoundfilter.Plo  libgstcsound_la-gstcsoundsrc.Plo  libgstcsound_la-plugin.Plo  libgstcsoundfilter_la-gstcsoundfilter.Plo  libgstcsoundfilter_la-plugin.Plo
src/.libs/: libgstcsound.exp  libgstcsound.la  libgstcsound.lai  libgstcsound.ver  libgstcsoundfilter.exp  libgstcsoundfilter.la  libgstcsoundfilter.lai  libgstcsoundfilter.ver
